--- a/0_uothesisapa_preamble.tex
+++ b/0_uothesisapa_preamble.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%                                                                              %  
-%       This is the beginning of a uothesisapa Dissertation                    % 
-%                                                                              %    
+%                                                                              %
+%       This is the beginning of a uothesisapa Dissertation                    %
+%                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -31,7 +31,7 @@
 \usepackage[american]{babel}
 % \usepackage{mathtools}
 \usepackage{dcolumn,booktabs,longtable} %,subfig
-\usepackage[singlelinecheck=false]{caption} 
+\usepackage[singlelinecheck=false]{caption}
   \captionsetup[subfigure]{singlelinecheck=on, labelfont=normalfont}
   \captionsetup[figure]{labelfont=it}
 \usepackage{placeins}
@@ -44,12 +44,13 @@
 \usepackage{appendix}
 \usepackage{setspace}
 \usepackage{tikz}
-  \usetikzlibrary{arrows,positioning} 
+  \usetikzlibrary{arrows,positioning}
   \tikzset{>=latex}
 % \usepackage[natbibapa]{apacite}
 %   \bibliographystyle{apacite}
-\usepackage[normalem]{ulem} 
+\usepackage[normalem]{ulem}
 \usepackage{tabularx,xspace,multirow}
+\usepackage[para,online,flushleft]{threeparttable}
 \usepackage{array}
 
 % Added by Jacob L. following https://tex.stackexchange.com/questions/148314/undefined-control-sequence-in-printbibliography-biblatex to allow UTF-8 (non-ASCII) characters in the bibliography .bib file.
@@ -72,7 +73,7 @@
 \appto{\small}{\zerodisplayskips}
 \appto{\footnotesize}{\zerodisplayskips}
 
-% Create an empty definition for \tightlist, which Pandoc defines when *it* converts from markdown to PDF, following http://tex.stackexchange.com/a/257464/56363 (without this, you'll get an error from pdflatex, "Undefined control sequence.... \tightlist" 
+% Create an empty definition for \tightlist, which Pandoc defines when *it* converts from markdown to PDF, following http://tex.stackexchange.com/a/257464/56363 (without this, you'll get an error from pdflatex, "Undefined control sequence.... \tightlist"
 \def\tightlist{}
 
 % Number only chapter headings (level 0)
